--- a/index.html
+++ b/index.html
@@ -5,22 +5,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
   <!--Add the style sheet here-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css">
+
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+
   <title>Taskmaster Pro</title>
 </head>
 
 <body>
   <div class="row min-vh-100 no-gutters">
     <header class="col-12 col-lg-3 bg-dark text-light sticky-top d-flex flex-column p-4 p-lg-3">
-      <h1 class="text-center">Taskmaster Pro Edition</h1>
-      <button id="create-task" class="btn btn-block btn-success" data-toggle="modal" data-target="#task-form-modal">Add
-        Task</button>
-      <button id="remove-tasks" class="btn btn-block btn-danger">Delete All Tasks</button>
-      <p class="mt-auto d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas
+      <h1 class="text-center">
+        <span class="oi oi-task d-inline d-lg-none"></span>
+        Taskmaster Pro Edition
+      </h1>
+      <button id="create-task" class="btn btn-block btn-add" data-toggle="modal" data-target="#task-form-modal">
+        <!-- What does the mr-2 do? Hint: it's Bootstrap!-->
+        <span class="oi oi-plus mr-2"></span>
+        Add Task
+      </button>
+      <button id="remove-tasks" class="btn btn-block btn-danger">
+        <span class="oi oi-trash mr-2"></span>
+        Delete All Tasks</button>
+      <span class="oi oi-task display-1 text-center mb-2 d-none d-lg-block mt-auto"></span>
+      <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi voluptas
         architecto ipsa excepturi aut non laudantium sequi fugit officiis optio deleniti asperiores rem eius
         laborum maxime blanditiis culpa, quis iste?
       </p>
@@ -32,7 +46,7 @@
         <!-- to do start-->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
+            <h4 class="card-header bg-dark text-light d-flex align-items-center">
               To Do
             </h4>
             <ul id="list-toDo" class="list-group list-group-flush">
@@ -47,7 +61,7 @@
         <!--In progress start-->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
+            <h4 class="card-header bg-dark text-light d-flex align-items-center">
               In Progress</h4>
             <ul id="list-inProgress" class="list-group list-group-flush">
               <!-- <li class="list-group-item">
@@ -61,7 +75,7 @@
         <!--In review start-->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
+            <h4 class="card-header bg-dark text-light d-flex align-items-center">
               In Review
             </h4>
             <ul id="list-inReview" class="list-group list-group-flush">
@@ -76,7 +90,7 @@
         <!--Done start-->
         <div class="col-12 col-md-6 col-xl-3 mb-3">
           <div class="card">
-            <h4 class="card-header bg-dark text-light">
+            <h4 class="card-header bg-dark text-light d-flex align-items-center">
               Done
             </h4>
             <ul id="list-done" class="list-group list-group-flush">
@@ -89,13 +103,13 @@
         </div>
       </div>
       <!-- Done end-->
-      <div class="mt-auto">
+      <div class="mt-auto overflow-hidden">
         <div id="trash">
-          <div class="w-100 bg-danger p-3 text-center text-light display-4">
+          <div class="w-100 p-3 text-center bottom-trash">
+            <span class="oi oi-trash"></span>
             Drop Here to Remove.
           </div>
         </div>
-      </div>
     </main>
   </div>
 
@@ -105,7 +119,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="task-form-modal">Add New Task</h5>
+          <h5 class="modal-title" id="myModalTitle">Add New Task</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -118,25 +132,24 @@
             </div>
             <div class="form-group">
               <label for="modalDueDate">Due date</label>
-              <input type="text" class="form-control" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off" />
+              <input type="text" class="form-control" id="modalDueDate" placeholder="mm/dd/yyyy" autocomplete="off">
             </div>
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save Task</button>
+          <button type="button" class="btn btn-close" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-save">Save Task</button>
         </div>
       </div>
     </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <!-- Add js file here-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  <!--Add touch punch here-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 
